# pi-topOS-Web-Portal

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  MANIFEST.in  README.md  README.rst  build.sh  conftest.py  setup.cfg  setup.py  test.sh
.github/: dependabot.yml
.github/workflows/: build-on-commits-to-master.yml  build-on-prs-to-master.yml  build.yml  codeql-analysis.yml  create-draft-release.yml  deb-build.yml  deb-release.yml  deb-update-changelog.yml  release.yml  tag-and-draft-release-on-changelog-pr-merge.yml  test-all-commits.yml  test-and-build-on-all-commits.yml  test.yml  update-changelog-draft-pr-on-commits-to-master.yml  update-changelog.yml
debian/: changelog  control  copyright  pt-device-registration.service  pt-os-setup.install  pt-os-setup.postinst  pt-os-setup.prerm  pt-os-setup.service  pt-os-web-portal-desktop.install  pt-os-web-portal-desktop.lintian-overrides  pt-os-web-portal-desktop.pt-os-web-portal-port-busy.service  pt-os-web-portal-port-busy.service  pt-os-web-portal-rover-controller.service  pt-os-web-portal-vnc-advanced-wifi.service  pt-os-web-portal-wpa-gui-vnc.service  pt-os-web-portal.install  pt-os-web-portal.lintian-overrides  pt-os-web-portal.postinst  pt-os-web-portal.service  pt-web-portal-desktop.install  pt-web-portal-desktop.lintian-overrides  pt-web-portal-desktop.postinst  pt-web-portal-desktop.preinst  pt-web-portal-port-busy.service  pt-web-portal.install  pt-web-portal.lintian-overrides  pt-web-portal.postinst  pt-web-portal.prerm  pt-web-portal.service  py3dist-overrides  rules
debian/bullseye-overrides/: pt-os-web-portal-desktop.lintian-overrides  pt-os-web-portal.lintian-overrides
debian/extra/: handle-service-restart-in-policy  notify-on-port-busy.sh  pt-os-about.desktop  pt-os-updater.desktop
debian/extras/: notify-on-port-busy.sh  pwdptwp.sh
debian/source/: lintian-overrides
device-registration/: device-registration
docs/: README.md
frontend/: package-lock.json  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: Root.tsx  index.css  index.js  setupTests.js
guides/: pi-top-4-remote.md
pkg/: expand-fs.sh  notify-on-port-busy.sh  pt-about.desktop  pt-os-setup.desktop  pt-tour.desktop  pt-web-portal.desktop  pwdpto.sh
pt_os_web_portal/: __init__.py  __main__.py  app.py  conftest.py  connection_manager.py  device_registration_manager.py  event.py  fw_updater_listener.py  listener_manager.py  notification_listener.py  os_update_listener.py  os_updater.py  pt-os-web-portal  pt_os_version_check.py  state.py  version.py
pt_os_web_portal/app_window/: __init__.py  __main__.py  about_app_window.py  app_factory.py  app_window.py  onboarding_app_window.py  os_updater_app_window.py  tour_app_window.py
pt_os_web_portal/backend/: __init__.py  routes.py
pt_os_web_portal/device_registration/: functions.py  listener.py  manager.py
pt_os_web_portal/miniscreen_onboarding/: __init__.py  __main__.py  app.py  connection_manager.py  helpers.py  menus.py  onboarding_app.py  page_manager.py  pages.py
pt_os_web_portal/miniscreen_onboarding_assistant/: __init__.py  __main__.py  onboarding_assistant_app.py  page_manager.py  pages.py  root.py  viewport.py
pt_os_web_portal/os_updater/: __init__.py  backend.py  legacy.py  manager.py  message_handler.py  progress.py  system_clock.py  types.py  updater.py
scripts/: pt-web-vnc  web-vnc
src/: notify-on-port-busy.sh
src/frontend/: package-lock.json  (+2 more)
tests/: conftest.py  mocks.py  requirements.txt  test_about.py  test_app_window.py  test_connection_manager.py  test_device_registration_module.py  test_event.py  test_finalise.py  test_handle_service_restart_functions.py  test_keyboard.py  test_landing.py  test_language.py  test_locales.py  test_network_manager_handler_class.py  test_os_updater_class.py  test_registration.py  test_routes.py  test_rover_controller.py  test_system.py  test_timezones.py  test_vnc.py  test_vnc_advanced_wifi_gui.py  test_vnc_wpa_gui.py  test_wifi_connections.py  test_wifi_country.py  test_wifi_manager.py  test_wifi_manager_class.py  test_wifi_routes.py  test_wpa_supplicant_handler_class.py  utils.py
(+754 files in other folders)
