[metadata]
name = pt-os-web-portal
author = pi-top (CEED Ltd)
author_email = deb-maintainers@pi-top.com
license = Apache Software License
description = pi-topOS Web Portal
keywords = pi-top, raspberrypi
url = https://github.com/pi-top/pi-topOS-Web-Portal
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Education
    Intended Audience :: Developers
    Topic :: Education
    Topic :: System :: Hardware
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    # Package will always update in-step with SDK
    # So avoid version-locking
    pitop
    # Main package needed since 'labs' is in it.
    # Actual subpackage dependencies are:
    # pitop.battery
    # pitop.camera
    # pitop.common
    # pitop.robotics
    # pitop.system
    click>=7.1.2
    click-logging>=1.0.1
    Flask>=1.1.2
    Flask-Cors>=3.0.9
    gevent>=20.9.0
    gevent-websocket>=0.10.1
    pt-web-vnc>=0.2.0
    # TODO: add pt-miniscreen dependency once it's published in pypi
    # pt-miniscreen
    requests>=2.25.1
    websockets>=8.1
    nmcli>=1.3.0
include_package_data = True

[options.entry_points]
console_scripts =
    pt-os-web-portal=pt_os_web_portal.__main__:main
    pt-os-web-portal-frontend=pt_os_web_portal.app_window.__main__:main
    pt-os-web-portal-rover-controller=pt_os_web_portal.rover_controller.__main__:main
    pt-os-web-portal-vnc-advanced-wifi=pt_os_web_portal.backend.helpers.vnc_advanced_wifi_gui:main
    ; Entrypoint for miniscreen onboarding
    ;
    ; pt-miniscreen-onboarding-assistant=pt_os_web_portal.miniscreen_onboarding_assistant.__main__:main

[bdist_wheel]
universal = 1

[flake8]
per-file-ignores =
    __init__.py: F401
    test_*: E402
# https://black.readthedocs.io/en/stable/faq.html#why-are-flake8-s-e203-and-w503-violated
extend-ignore = E203
max-line-length = 150

[isort]
profile = black

[tool:pytest]
norecursedirs =
    .git
    debian
    docs
    frontend
    tests/old
